fixed issues with tutorial, images, and links

--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -77,32 +77,26 @@
       <hr />
       <div class="pattern">
         <h2>Teen-sized Beanie Pattern</h2>
+
+        <h3 class = "yarnheader">This pattern was written using a size 4 yarn like the red heard super saver yarn and a size 5.5 hook. The number of rows of increases and plain &frac12; double crochet rows may need to be adjusted depending on the yarn used</h3>
         <ol>
           <li>Slip Knot</li>
           <li>Chain 4</li>
           <li>Slip stitch into the first stitch</li>
           <li>Create ten &frac12; Double crochets into the ring</li>
           <li>
-            Pattern: two half double crochets into each stitch (2, 2, 2, ... 2)
+           Then begin increasing creating a circle. Start with two half double crochets into each stitch (2, 2, 2, ... 2) <br><em> Note: all increase rounds should end
+            on two &frac12; Double crochets on the last stitch</em>
           </li>
           <li>
-            One &frac12; Double, two &frac12; Double alternating between each
+            Increase every other stich doing one &frac12; Double, two &frac12; Double into the first stitch and two into the second alternating between each
             stitch (1, 2, 1, 2, 1, ... 2)
           </li>
-          <li>1, 1, 2, 1, 1, 2, 1, 1, ... 2</li>
-          <li>1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, ... 2</li>
+          <li>Increase every two stiches doing one  &frac12; Double, two &frac12; into the first two stitches and then two into the third stitch (1, 1, 2, 1, 1, 2, 1, 1, ... 2)</li>
+          <li>Increase every three stiches doing one  &frac12; Double, two &frac12; into the first three stitches and then two into the fourth stitch (1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, ... 2)</li>
+          <li>Increase every four stiches doing one  &frac12; Double, two &frac12; into the first four stitch and then two into the fifth stitch (1, 1, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, ... 2) 
           <li>
-            1, 1, 1, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, ... 2 (should always end
-            on two &frac12; Double crochets after the last stitch)
-          </li>
-          <li>
-            After you have a nice circle, you just &frac12; Double crochet once
-            in every stitch all the way until long enough to be beanie (try it
-            on!).
-          </li>
-          <li>
-            The 7” beanie with a folded edge this should be about 19 rows of
-            &frac12; double crochets, for a total of 25 rows.
+            &frac12; Double crochet once in every stitch all the way around until long enough to be beanie. This should be about 19 rows of &frac12; for a 7" teen sized beanie with a folded edge for a total of 25 rows 
           </li>
           <li>Slip stitch into the next stitch</li>
           <li>Tie off and weave in your ends</li>
