--- a/index.html
+++ b/index.html
@@ -53,15 +53,16 @@
       </section>
       <section id="photos">
         <div class="beanie-container">
-          <img id="beanie-pic" src="./imgs/newbeanie.jpeg" alt="beanies made" />
+          <img id="beanie-pic" src="./imgs/winterspring23beanie.jpeg" alt="beanies made in winter and spring of 2023" />
           <p id="beanie-caption">
-            The one-hundred beanies we donated to the Jessie Rees Foundation
-            last year!
+            The 227 beanies we donated to the Jessie Rees Foundation
+            during Winter and Spring of 2023!
           </p>
         </div>
         <div class="board-container">
-          <img id="board-pic" src="./imgs/newboard.jpeg" alt="board members" />
-          <p id="board-caption">2021-2022 Club Members!</p>
+          <img id="board-pic" src="./imgs/fall22beanie.jpeg" alt="beanies made in fall 2022" />
+          <p id="board-caption">  The 200 beanies we donated to the Jessie Rees Foundation
+            during Fall 2023!</p>
         </div>
       </section>
     </div>
