--- a/joinus.html
+++ b/joinus.html
@@ -69,22 +69,30 @@
         Join our GroupMe!<br />
         <button
           id="groupme"
-          onclick="window.location.href=`https://groupme.com/join_group/89272597/s4aJ0det`;"
+          onclick="window.location.href=`https://groupme.com/join_group/96812117/kSt1vrxG`;"
         >
           Link
         </button>
         <hr>
       </p>
-
       <p class="interest-form">
         Fill out our interest form! <br />
         <button
           id="form"
-          onclick="window.location.href=`https://forms.gle/ZjLRWXkXo5o8Lub29`;"
+          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSeR5G7ixXicoqWlxPXtQ8p0bYLCDzmxvcbXKTJJOU1tfTfv3A/viewform?usp=sf_link`;"
         >
           Link
         </button>
-        
+      <hr>
+      </p>
+      <p class="mailing-list">
+        Join Our Mailing List! <br />
+        <button
+          id="mailinglist"
+          onclick="window.location.href=`http://eepurl.com/iyWXoo`;"
+        >
+          Link
+        </button>
       </p>
     </div>
   </body>
