fixed forms added yuki's pattern

--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -73,12 +73,20 @@
         href="https://youtube.com/playlist?list=PLyUW7HzKUEk6f0xm33XyAz1dIleukGtpC"
         >Simple Beanie Patterns Link</a
       >
+      <a
+      href="https://youtube.com/playlist?list=PLyUW7HzKUEk6f0xm33XyAz1dIleukGtpC"
+      >Simple Beanie Patterns Link</a
+    >
+    <a
+      href="./imgs/HoundstoothHat.pdf"
+      >Houndstooth Hat pattern made by one of our wonderful members Yuki</a
+    >
 
       <hr />
       <div class="pattern">
         <h2>Teen-sized Beanie Pattern</h2>
 
-        <h3 class = "yarnheader">This pattern was written using a size 4 yarn like the red heard super saver yarn and a size 5.5 hook. The number of rows of increases and plain &frac12; double crochet rows may need to be adjusted depending on the yarn used</h3>
+        <h3 class = "yarnheader">This pattern was written using a size 4 yarn and a size 5.5 hook. The number of rows of increases and non increase &frac12; double crochet rows may need to be adjusted depending on the yarn used</h3>
         <ol>
           <li>Slip Knot</li>
           <li>Chain 4</li>
