--- a/forms.html
+++ b/forms.html
@@ -45,25 +45,30 @@
       </button>
     </nav>
     <div class="body-container">
+      <p class ="description">
+        Please fill out this form every meeting to get credit for your attendance! The word of the day will be given out during the meeting
+       </p>
       <p class="signin">
         Sign in Form<br />
         <button
           id="sign"
-          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSeYfg8qX6aLbwXa0q4o6yFn6wGiro-Hdc5K73SS2WbKRmSKGw/viewform`;"
-        >
+          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSfvXsS_uXBUNlavwwSJ1G_p5DCzwVfY-G7RnV_1U64Ev5cTyA/viewform?usp=sf_link`;">
           Link
         </button>
       </p>
+      </div>
       <hr />
-      <p class="checkout">
-        Supply Checkout Form<br />
-        <button
-          id="out"
-          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSf_PB7qzE7W0h2aluxPSAva9Gmkf8kfUB1JzRgbZ1AcsQZuqw/viewform`;"
-        >
-          Link
-        </button>
-      </p>
+      <p class ="description">
+        Please Venmo $15 @ucla-cfc to have access to our crocheting supplies!
+        </p>
+       <p class="Venmo">
+         Venmo<br />
+         <button
+           id="Venmo"
+           onclick="window.location.href=`https://venmo.com/u/ucla-cfc`;">
+           Link
+         </button>
+       </p>
     </div>
   </body>
 </html>
