--- a/joinus.html
+++ b/joinus.html
@@ -62,7 +62,7 @@
       <p class="application-blurb">
         <span id="emphasis">No application needed!</span><br />Just come to our
         meetings! We meet every Wednesday at 6pm in Ackerman A201! <br />
-        <span class="venmo">Venmo $15 club dues to @ucla-cfc</span>
+      <!-- <span class="venmo">Venmo $15 club dues to @ucla-cfc</span> -->
       </p>
       <hr>
       <p class="contact-us">
