--- a/beanietutorial.html
+++ b/beanietutorial.html
@@ -48,7 +48,7 @@
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
-        <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
+        <li><a href="beanietutorial.html">Tutorials</a></li>
         <li><a href="forms.html">Forms</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
       </ul>
@@ -61,9 +61,15 @@
 
     <div class="body-container">
       <h2 class="title">
-        This quarter we are looking for teen-sized beanies! <br />
-        Circumference 20 &frac12;" -22" height 9-10"
+        This quarter we are looking for teen-sized beanies and stuffed animals! <br />
+        The beanies should have a circumference of 20 &frac12;" -22" and a height of 9-10"
       </h2>
+
+      <h2>Stuffed Animal Tutorials</h2>
+      <a href = "https://www.youtube.com/watch?v=BczaOIrCfAc">Crochet Mini Bear Pattern Link</a>
+
+      <a href = "https://www.stitchbyfay.com/30-free-no-sew-amigurumi-crochet-patterns/"> Easy No Sew Amigurumi Crochet Patterns Link</a>
+
       <h2>Beanie Tutorials</h2>
       <a
         href="https://youtube.com/playlist?list=PLyUW7HzKUEk5KqsUlwNWX6K5by0JLswCo"
@@ -73,10 +79,6 @@
         href="https://youtube.com/playlist?list=PLyUW7HzKUEk6f0xm33XyAz1dIleukGtpC"
         >Simple Beanie Patterns Link</a
       >
-      <a
-      href="https://youtube.com/playlist?list=PLyUW7HzKUEk6f0xm33XyAz1dIleukGtpC"
-      >Simple Beanie Patterns Link</a
-    >
     <a
       href="./imgs/HoundstoothHat.pdf"
       >Houndstooth Hat pattern made by one of our wonderful members Yuki</a
