--- a/contactus.html
+++ b/contactus.html
@@ -48,7 +48,7 @@
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
-        <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
+        <li><a href="beanietutorial.html">Tutorials</a></li>
         <li><a href="forms.html">Forms</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
       </ul>
