--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
-        <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
+        <li><a href="beanietutorial.html">Tutorials</a></li>
         <li><a href="forms.html">Forms</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
       </ul>
@@ -47,7 +47,7 @@
             acquiring and maintaining the unique skill of crocheting. Members
             learn how to crochet beanies which are donated to Jessie Rees
             Foundation’s Brave Beanie program. This foundation puts these beanies into Jessie’s Joy Jars which are given to kids
-            fighting cancer.
+            fighting cancer. We also make stuffed animals!
           </p>
         </div>
       </section>
