--- a/joinus.html
+++ b/joinus.html
@@ -48,7 +48,7 @@
       <ul class="nav-holder">
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
-        <li><a href="beanietutorial.html">Beanie Tutorials</a></li>
+        <li><a href="beanietutorial.html">Tutorials</a></li>
         <li><a href="forms.html">Forms</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
       </ul>
@@ -61,7 +61,7 @@
     <div class="body-container">
       <p class="application-blurb">
         <span id="emphasis">No application needed!</span><br />Just come to our
-        meetings! We meet every Wednesday at 6pm in Ackerman A201! <br />
+        meetings! We meet every Wednesday at 6pm in Kaplan A46! <br />
       <!-- <span class="venmo">Venmo $15 club dues to @ucla-cfc</span> -->
       </p>
       <hr>
