updating the attendance link

--- a/forms.html
+++ b/forms.html
@@ -35,7 +35,7 @@
         <li><a href="index.html">Homepage</a></li>
         <li><a href="joinus.html">Join Us</a></li>
         <li><a href="beanietutorial.html">Tutorials</a></li>
-        <li><a href="forms.html">Forms</a></li>
+        <li><a href="forms.html">Attendance Form</a></li>
         <li><a href="contactus.html">Contact Us</a></li>
       </ul>
       <button class="hamburger">
@@ -48,27 +48,16 @@
       <p class ="description">
         Please fill out this form every meeting to get credit for your attendance! The word of the day will be given out during the meeting
        </p>
+      <hr>
       <p class="signin">
-        Sign in Form<br />
+        Attendance Form<br />
         <button
           id="sign"
-          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSfvXsS_uXBUNlavwwSJ1G_p5DCzwVfY-G7RnV_1U64Ev5cTyA/viewform?usp=sf_link`;">
+          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSefEbOuqF8mCDnsXvK-f7Rk-DmF0DecaqDkbWWGvcCzqcGHuA/viewform?usp=sf_link`;">
           Link
         </button>
       </p>
       </div>
-      <hr />
-      <p class ="description">
-        Please Venmo $15 @ucla-cfc to have access to our crocheting supplies!
-        </p>
-       <p class="Venmo">
-         Venmo<br />
-         <button
-           id="Venmo"
-           onclick="window.location.href=`https://venmo.com/u/ucla-cfc`;">
-           Link
-         </button>
-       </p>
     </div>
   </body>
 </html>
