--- a/joinus.html
+++ b/joinus.html
@@ -94,6 +94,17 @@
           Link
         </button>
       </p>
+
+      <hr />
+      <p class ="description">
+        Please Venmo $15 @ucla-cfc to have access to our crocheting supplies! <br />
+         <button
+           id="Venmo"
+           onclick="window.location.href=`https://venmo.com/u/ucla-cfc`;">
+           Link
+         </button>
+        </p>
+
     </div>
   </body>
 </html>
