--- a/joinus.html
+++ b/joinus.html
@@ -61,7 +61,7 @@
     <div class="body-container">
       <p class="application-blurb">
         <span id="emphasis">No application needed!</span><br />Just come to our
-        meetings! We meet every Wednesday at 6pm in Kerckhoff Hall Meeting Room - 152! <br />
+        meetings! We meet every Wednesday at 6pm in Royce Hall Meeting Room - 156! <br />
       <!-- <span class="venmo">Venmo $15 club dues to @ucla-cfc</span> -->
       </p>
       <hr>
