--- a/forms.html
+++ b/forms.html
@@ -53,7 +53,7 @@
         Attendance Form<br />
         <button
           id="sign"
-          onclick="window.location.href=`https://docs.google.com/forms/d/e/1FAIpQLSefEbOuqF8mCDnsXvK-f7Rk-DmF0DecaqDkbWWGvcCzqcGHuA/viewform?usp=sf_link`;">
+          onclick="window.location.href=`https://forms.gle/fhHAsnFBukpgii3k8`;">
           Link
         </button>
       </p>
